2007-09-04  Stefan Harmeling  <harmeling@gmail.com>

	* object.c (to_string): however, we still cannot guarantee that
	builtin function always receive 0 instead of void_obj.  The latter
	happens when called via eval(), but when called from other C-code
	the void_obj might reach a builtin function.  There might be other
	places where we need to extend the zero case with void_obj similar
	to to_string().

	* eval.c (call_builtin_fun): void_obj as arguments to builtin
	functions are replaced by zeros.

	* object.c (assign): if trying to assign 0, we assign void_obj.

	* rha_config.pl: now an object void_obj is generated in
	rha_init().  Builtin function with return value void return now
	void_obj. 

	* mat_fn.c, utils.c: added bound checks for matrix get/set via
	idx() function defined in utils.c which allows negative indices.

	* prules.c (resolve_assign_prule): commented out the
	'lookup-local' stuff, problem was something like:

	f = fn (x) 2*x;
	g = new();
	g.fn_data = list();
	g.fn_data.push(clone(f.fn_data(0)));
	

	* python.c (start_python_if_necessary): added some functions for demo...

	* python.h: added more functions

	* core.c (vcreate_pattern): introduced patternliteral_sym,
	patterntype_sym
	

	* eval.c (pattern_matches): removed serious bug.  the problem was
	that after not finding but trying to find, variable 'impl' had a
	non-zero value and was thus chosen.  the problem was that:

	if (17) 42

	was allowed but would fail with an assert.

	added support for sorting implementations.  Now the list of
	implementations f.fn_data is sorted such that for i<j we never
	have signature(i)>signature(j).
	
2007-09-03  Stefan Harmeling  <harmeling@gmail.com>

	* utils.c (idx): added function that checks index bounds and deals
	with negative indices.  This function is currently used in
	tuple_fn.c and mat_fn.c.

	* list_fn.c (list_insert_sorted): added function that can insert
	in a way that keeps the list sorted.  More precisely for non-total